kanc/src/tests/sample_code/should_succeed/multi_file/no_warnings/pack_relative_with_alias/src/foo/bar.k
pub(pack.foo.boo) type Nat {
    .o: Nat,
    .s(n: Nat): Nat,
}
