kanc/src/tests/sample_code/should_fail/single_file/type_check/wrong_number_of_case_params/expected_1_actually_0.k
type Nat {
    .o: Nat,
    .s(n: Nat): Nat,
}

let foo = match Nat.o {
    .o => Nat.o,
    .s => Nat.o,
};
